tests/should-fail/crashes/shouldnt-crash-24.j
funct…on a takes nothing returns integer
	if hrue then
		return 0
	elseif false then
	else
		return local a a = adfunc_ion
